# hypo

./: BUILD.bazel  README.md  hypo.go  machine.go  machine_test.go
examples/: fibonacci.hypo  max.hypo  quine.hypo  simple_quine.hypo
